fix: Remove grid from wrapping div

--- a/src/app/(frontend)/_components/TalkingPoints/TalkingPoints.module.scss
+++ b/src/app/(frontend)/_components/TalkingPoints/TalkingPoints.module.scss
@@ -6,7 +6,7 @@
 @use "@aleph/nought-sass-mixins/sass/utils";
 
 .Wrap {
-  @include containerGrid;
+  @include container;
 }
 
 .PointsWrap {
